Various updates for speech recognition stuff:
* Added new config for sphinx that better suits the HUB4 model.
* Renamed the test audio which was causing problems due to having spaces in it
* Added an audio waveform visualisation that shows the [incorrect] timings of the detected words

* Added new subproject of content for adding various visualisations into
  - Added first visualisation that is the audio waveform plotter (taken from the demos)
  - Updated the demos to use that class instead.
  - Updated content/pom.xml to include the extra module
  - Updated demos/pom.xml to reference the visualisations subproject
  - Updated sandbox/pom.xml to reference the visualisations subproject

* Added some other audio stuff been working on (not necessarily working 100% yet - but it should all compile)
   - Synthesizer for generating tones. Useful for testing various audio filters.
   - Test for synth (in sandbox)
   -